@@ -1,5 +1,5 @@
 
-# $Header: /home/jakubs/DEV/jnettop-conversion/jnettop/acinclude.m4,v 1.10 2004-10-04 09:40:49 merunka Exp $
+# $Header: /home/jakubs/DEV/jnettop-conversion/jnettop/acinclude.m4,v 1.11 2004-10-04 09:52:55 merunka Exp $
 
 AH_TEMPLATE([HAVE_GETHOSTBYADDR_R_5], [Set to 1 if gethostbyaddr_r takes 5 arguments])
 AH_TEMPLATE([HAVE_GETHOSTBYADDR_R_7], [Set to 1 if gethostbyaddr_r takes 7 arguments])
@@ -256,13 +256,13 @@ AC_DEFUN(AC_NETTOP_CHECK_GETHOSTBYADDR_R,
 
   if uname -a | grep "FreeBSD" > /dev/null 2>&1; then
     echo "**********************************************************************"
-    echo "**  configure script detected, that you're using FreeBSD            **"
+    echo "**  configure script detected, that you're using FreeBSD.           **"
     echo "**  5.1-RELEASE and maybe others have been found to contain         **"
     echo "**  bogus implementation of gethostbyaddr_r function.               **"
     echo "**                                                                  **"
     echo "**  IN CASE YOU ENCOUNTER ANY Bus Error OR SegFault PROBLEMS WITH   **"
-    echo "**  jnettop, please specify --disable-multithreaded-resolver        **"
-    echo "**  option to configure script!!                                    **"
+    echo "**  jnettop, PLEASE SPECIFY --disable-multithreaded-resolver        **"
+    echo "**  OPTION TO CONFIGURE SCRIPT!!                                    **"
     echo "**********************************************************************"
   fi
 
