@@ -1,3 +1,5 @@
+2004-10-04:	Added --disable-multithreaded-resolver option for FreeBSD
+
 2004-10-02:	Fixed porting issues to freebsd and solaris
 
 2004-09-28:	Added packet counting instead of just bytes counting
@@ -31,4 +33,4 @@
 
 2002-08-22:	The package is entirely new.
 
-$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/NEWS,v 1.10 2004-10-01 22:43:35 merunka Exp $
+$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/NEWS,v 1.11 2004-10-04 09:52:55 merunka Exp $
